# public/openapi.json
@@ -276,17 +276,6 @@
     }
   },
   "components": {
-    "schemas": {},
-    "securitySchemes": {
-      "ApiKeyAuth": {
-        "type": "apiKey",
-        "in": "header",
-        "name": "x-api-key",
-        "description": "SocialArt GPT API Key"
-      }
-    }
-  },
-  "security": [
-    { "ApiKeyAuth": [] }
-  ]
+    "schemas": {}
+  }
 }
